--- a/index.html
+++ b/index.html
@@ -2,11 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div>Header Logo</div>
+        <div class="menu">
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+    </div>
+    <div class="hero">
+        <div class="awesome">
+            <div>
+                This website is awesome
+            </div>
+            <p>
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+            </p>
+            <button class="sign-up">Sign up</button>
+        </div>
+        <div class="img-placeholder">
+            this is a placeholder for an image
+        </div>
+    </div>
 </body>
 </html>
