Add to index.html

--- a/index.html
+++ b/index.html
@@ -26,10 +26,21 @@
             <p>
                 This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
             </p>
-            <button class="sign-up">Sign up</button>
+            <div class="sign-up">Sign up</div>
         </div>
         <div class="img-placeholder">
             this is a placeholder for an image
+        </div>
+    </div>
+    <div class="random">
+        <div>
+            Some random information.
+        </div>
+        <div class="images">
+            <div class="blue-squares"></div>
+            <div class="blue-squares"></div>
+            <div class="blue-squares"></div>
+            <div class="blue-squares"></div>
         </div>
     </div>
 </body>
