--- a/index.html
+++ b/index.html
@@ -37,10 +37,22 @@
             Some random information.
         </div>
         <div class="images">
-            <div class="blue-squares"></div>
-            <div class="blue-squares"></div>
-            <div class="blue-squares"></div>
-            <div class="blue-squares"></div>
+            <div class="info">
+                <div class="blue-box"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="blue-box"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="blue-box"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="blue-box"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
         </div>
     </div>
 </body>
