--- a/index.html
+++ b/index.html
@@ -55,5 +55,25 @@
             </div>
         </div>
     </div>
+    <div class="quote">
+        <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div>-Thor, God of Thunder</div>
+    </div>
+    <div>
+        <div class="call-to-action">
+            <div class="cta-text">
+                <div>
+                    Call to action! It's time!
+                </div>
+                <div>
+                    Sign up for our product by clicking that button right over there!
+                </div>
+            </div>
+            <div class="sign-up">Sign up</div>
+        </div>
+    </div>
+    <div class="footer">
+        Copyright &#169; The Odin Project 2022
+    </div>
 </body>
 </html>
