--- a/index.html
+++ b/index.html
@@ -8,28 +8,30 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header">
-        <div>Header Logo</div>
-        <div class="menu">
+    <div class="top">
+        <div class="header">
+            <div>Header Logo</div>
+            <div class="menu">
             <ul>
                 <li>header link one</li>
                 <li>header link two</li>
                 <li>header link three</li>
             </ul>
+            </div>
         </div>
-    </div>
-    <div class="hero">
-        <div class="awesome">
-            <h1>
+        <div class="hero">
+            <div class="awesome">
+                <h1>
                 This website is awesome
-            </h1>
-            <p>
-                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
-            </p>
-            <div class="sign-up">Sign up</div>
-        </div>
-        <div class="img-placeholder">
-            this is a placeholder for an image
+                </h1>
+                <p>
+                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+                </p>
+                <div class="sign-up">Sign up</div>
+            </div>
+            <div class="img-placeholder">
+                this is a placeholder for an image
+            </div>
         </div>
     </div>
     <div class="random">
