--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </div>
         <div class="hero">
             <div class="awesome">
-                <h1>
+                <div class="awe-title">
                 This website is awesome
-                </h1>
+                </div>
                 <p>
                     This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
                 </p>
